--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
   </head>
   <body>
     <!-- navigation section -->
-    <nav class="md:container mx-auto bg-[#fff9f4]">
-      <div class="navbar">
+    <nav class="bg-[#fff9f4] mb-[76px]">
+      <div class="md:container mx-auto navbar">
         <div class="navbar-start">
           <div class="dropdown">
             <div tabindex="0" role="button" class="btn btn-ghost lg:hidden">
@@ -64,7 +64,10 @@
               <li><a>Contact us</a></li>
             </ul>
           </div>
-          <a class="btn btn-ghost text-xl">Browse<span class="text-[#ffdc26]">4</span>Pets</a>
+          <img src="c1-assets/logo-header.png" alt="">
+          <a class="text-3xl pl-2"
+            >Browse<span class="text-[#ffdc26]">4</span>Pets</a
+          >
         </div>
         <div class="navbar-center hidden lg:flex">
           <ul class="menu menu-horizontal px-1">
@@ -81,5 +84,25 @@
         </div>
       </div>
     </nav>
+
+    <!-- hero section -->
+    <section class="md:container mx-auto">
+      <div
+        class="min-h-[750px]"
+        style="
+          background-image: url(c1-assets/cat-big.png);
+          background-repeat: no-repeat;
+        "
+      >
+        <div class="w-2/5">
+          <div>
+            <h1 class="mb-5 text-5xl  font-bold ad">Pamper Your Pet, Because They Deserve the Bes</h1>
+            <p class="mb-5 text-gray-500">Discover a world of treats, toys, and essentials handpicked for your furry friends. Shop now and make tails wag with joy!
+            </p>
+            <button class="btn btn-warning">Find a pet</button>
+          </div>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
