--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
               <li><a>Contact us</a></li>
             </ul>
           </div>
-          <img src="c1-assets/logo-header.png" alt="">
+          <img src="c1-assets/logo-header.png" alt="" />
           <a class="text-3xl pl-2"
             >Browse<span class="text-[#ffdc26]">4</span>Pets</a
           >
@@ -86,7 +86,7 @@
     </nav>
 
     <!-- hero section -->
-    <section class="md:container mx-auto">
+    <section class="md:container mx-auto mb-[140px]">
       <div
         class="min-h-[750px]"
         style="
@@ -96,12 +96,95 @@
       >
         <div class="w-2/5">
           <div>
-            <h1 class="mb-5 text-5xl  font-bold ad">Pamper Your Pet, Because They Deserve the Bes</h1>
-            <p class="mb-5 text-gray-500">Discover a world of treats, toys, and essentials handpicked for your furry friends. Shop now and make tails wag with joy!
+            <h1 class="mb-5 text-5xl font-bold ad">
+              Pamper Your Pet, Because They Deserve the Bes
+            </h1>
+            <p class="mb-5 text-gray-500">
+              Discover a world of treats, toys, and essentials handpicked for
+              your furry friends. Shop now and make tails wag with joy!
             </p>
             <button class="btn btn-warning">Find a pet</button>
           </div>
         </div>
+      </div>
+    </section>
+
+    <!-- category section -->
+
+    <section class="md:container mx-auto mb-32">
+      <h1 class="mb-10 text-4xl ad">Browse By Categories</h1>
+      <!-- cards -->
+      <div class="grid lg:grid-cols-6 grid-cols-2 gap-6">
+        <!-- card 1 -->
+        <div
+          class="border bg-[#f9df8a] flex flex-col content-center items-center py-10 rounded-xl"
+        >
+          <img
+            class="bg-white rounded-full p-6"
+            src="c1-assets/dog-cartoon.png"
+            alt=""
+          />
+          <h1 class="text-2xl font-bold pt-6 pb-3">Dog</h1>
+          <h2 class="text-xl">3 items</h2>
+        </div>
+
+        <div
+          class="border bg-[#f9df8a] flex flex-col content-center items-center py-10 rounded-xl"
+        >
+          <img
+            class="bg-white rounded-full p-6"
+            src="c1-assets/dog-cartoon.png"
+            alt=""
+          />
+          <h1 class="text-2xl font-bold pt-6 pb-3">Dog</h1>
+          <h2 class="text-xl">3 items</h2>
+        </div>
+        <div
+          class="border bg-[#f9df8a] flex flex-col content-center items-center py-10 rounded-xl"
+        >
+          <img
+            class="bg-white rounded-full p-6"
+            src="c1-assets/dog-cartoon.png"
+            alt=""
+          />
+          <h1 class="text-2xl font-bold pt-6 pb-3">Dog</h1>
+          <h2 class="text-xl">3 items</h2>
+        </div>
+        <div
+          class="border bg-[#f9df8a] flex flex-col content-center items-center py-10 rounded-xl"
+        >
+          <img
+            class="bg-white rounded-full p-6"
+            src="c1-assets/dog-cartoon.png"
+            alt=""
+          />
+          <h1 class="text-2xl font-bold pt-6 pb-3">Dog</h1>
+          <h2 class="text-xl">3 items</h2>
+        </div>
+        <div
+          class="border bg-[#f9df8a] flex flex-col content-center items-center py-10 rounded-xl"
+        >
+          <img
+            class="bg-white rounded-full p-6"
+            src="c1-assets/dog-cartoon.png"
+            alt=""
+          />
+          <h1 class="text-2xl font-bold pt-6 pb-3">Dog</h1>
+          <h2 class="text-xl">3 items</h2>
+        </div>
+        <div
+          class="border bg-[#f9df8a] flex flex-col content-center items-center py-10 rounded-xl"
+        >
+          <img
+            class="bg-white rounded-full p-6"
+            src="c1-assets/dog-cartoon.png"
+            alt=""
+          />
+          <h1 class="text-2xl font-bold pt-6 pb-3">Dog</h1>
+          <h2 class="text-xl">3 items</h2>
+        </div>
+
+
       </div>
     </section>
   </body>
