--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
     <section class="md:container mx-auto mb-32">
       <h1 class="mb-10 text-4xl ad">Browse By Categories</h1>
       <!-- cards -->
-      <div class="grid lg:grid-cols-6 grid-cols-2 gap-6">
+      <div class="grid lg:grid-cols-6 grid-cols-2 lg:gap-6 gap-2">
         <!-- card 1 -->
         <div
           class="border bg-[#f9df8a] flex flex-col content-center items-center py-10 rounded-xl"
@@ -197,14 +197,14 @@
       <div class="md:container mx-auto">
         <h1 class="mb-10 text-4xl ad">Trending Pet Products</h1>
         <!-- cards -->
-        <div class="grid grid-cols-5 bg-[#fff9f4] gap-8">
+        <div class="grid lg:grid-cols-5 grid-cols-2 bg-[#fff9f4] lg:gap-8 gap-2">
           <!-- card 1 -->
           <div
             id="bg-img"
-            class="row-span-3 col-span-2 bg-[#f9df8a] pt-12 pl-8 rounded-lg"
+            class="lg:row-span-3 lg:col-span-2 row-span-3 col-span-2 lg:h-full h-[340px]  bg-[#f9df8a] pt-12 pl-8 rounded-lg"
           >
             <h1 class="text-2xl font-semibold">T-Shirt For Dogs</h1>
-            <p class="text-gray-500">
+            <p class="text-gray-500 py-4">
               Discover a world of treats, toys, and essentials handpicked for
             </p>
             <button class="btn">Shop Now</button>
@@ -345,7 +345,7 @@
               <h2>$39.99</h2>
             </div>
           </div>
-          <div class="bg-white rounded-lg gap-3 flex items-center">
+          <div class="bg-white rounded-lg gap-3 flex items-center hidden md:block md:flex">
             <div class="pl-3 py-3">
               <img
                 class="bg-[#fff9f4] p-5 rounded-md"
@@ -365,5 +365,38 @@
         </div>
       </div>
     </section>
+
+    <!-- low price section -->
+
+    <section class="mb-40">
+        <div class="md:container mx-auto">
+            <h1 class="mb-10 text-4xl ad">Everyday low Price</h1>
+            <div class="flex justify-between gap-5">
+                <!-- grooming mitt -->
+                <div class="flex justify-between items-center flex-1 bg-gradient-to-r from-[#f8ccfb] to-[#acd2fd] rounded-xl">
+                    <div class="pl-12">
+                        <h3 class="font-semibold pb-2">Under Price</h3>
+                        <h1 class="text-4xl ad">Pet Grooming Mitt</h1>
+                        <h2 class="text-xl font-semibold my-3 text-white">(Easy Hair Removal)</h2>
+                        <h1 class="text-4xl font-bold ad">$7.99</h1>
+                    </div>
+                    <div>
+                        <img src="c1-assets/cute-dog-mid.png" alt="">
+                    </div>
+                </div>
+                <!-- T-shirt for dogs -->
+                 <div class="flex justify-between w-[40%] pt-14 ps-12 bg-gradient-to-r from-[#fff9f4] to-[#f9df8a] rounded-xl">
+                    <div>
+                        <h1 class="text-4xl ad">T-Shirt for Dogs</h1>
+                        <h1 class="text-4xl font-bold ad text-[#ffdc26] pt-3">$7.99</h1>
+                    </div>
+                    <div>
+                        <img src="c1-assets/cute-pet-mid.png" alt="">
+                    </div>
+                 </div>
+            </div>
+        </div>
+    </section>
+
   </body>
 </html>
