--- a/index.html
+++ b/index.html
@@ -40,11 +40,11 @@
   </head>
   <body>
     <!-- navigation section -->
-    <nav class="bg-[#fff9f4] mb-[76px]">
+    <nav class="bg-[#fff9f4] mb-[76px] hidden md:block">
       <div class="md:container mx-auto navbar">
         <div class="navbar-start">
           <div class="dropdown">
-            <div tabindex="0" role="button" class="btn btn-ghost lg:hidden">
+            <div tabindex="0" role="button" class="btn btn-ghost md:hidden">
               <svg
                 xmlns="http://www.w3.org/2000/svg"
                 class="h-5 w-5"
@@ -81,11 +81,47 @@
             <li><a>Contact us</a></li>
           </ul>
         </div>
-        <div class="navbar-end gap-3 hidden md:flex md:block">
+        <div class="navbar-end gap-3">
           <i class="fa-regular fa-bell"></i>
           <i class="fa-solid fa-magnifying-glass"></i>
           <a class="btn border-2 border-yellow-500">Login</a>
           <a class="btn btn-warning">Register</a>
+        </div>
+      </div>
+    </nav>
+
+    <!-- responsive nav -->
+
+    <nav class=" bg-[#fff9f4] md:hidden h-20 content-center">
+      <div class="flex justify-between items-center md:container mx-auto px-5">
+        <div>
+          <img src="c1-assets/logo-header.png" alt="">
+        </div>
+        <div class="dropdown">
+          <div tabindex="0" role="button" class="btn btn-ghost lg:hidden">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              class="h-5 w-5"
+              fill="none"
+              viewBox="0 0 24 24"
+              stroke="currentColor"
+            >
+              <path
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                stroke-width="2"
+                d="M4 6h16M4 12h8m-8 6h16"
+              />
+            </svg>
+          </div>
+          <ul
+            tabindex="0"
+            class="menu menu-sm dropdown-content bg-base-100 rounded-box z-[1] mt-3 w-52 p-2 shadow"
+          >
+            <li><a>Find a pet</a></li>
+            <li><a>Breeds</a></li>
+            <li><a>Contact us</a></li>
+          </ul>
         </div>
       </div>
     </nav>
@@ -99,7 +135,7 @@
           background-repeat: no-repeat;
         "
       >
-        <div class="w-2/5">
+        <div class="lg:w-2/5 px-5">
           <div>
             <h1 class="mb-5 text-5xl font-bold ad">
               Pamper Your Pet, Because They Deserve the Bes
@@ -197,7 +233,7 @@
       <div class="md:container mx-auto">
         <h1 class="mb-10 text-4xl ad">Trending Pet Products</h1>
         <!-- cards -->
-        <div class="grid lg:grid-cols-5 grid-cols-2 bg-[#fff9f4] lg:gap-8 gap-2">
+        <div class="grid lg:grid-cols-5 grid-cols-2 bg-[#fff9f4] lg:gap-5 gap-2">
           <!-- card 1 -->
           <div
             id="bg-img"
@@ -230,7 +266,7 @@
             <div class="pl-3 py-3">
               <img
                 class="bg-[#fff9f4] p-5 rounded-md"
-                src="c1-assets/dog-cartoon.png"
+                src="c1-assets/fish-cartoon.png"
                 alt=""
               />
             </div>
@@ -247,7 +283,7 @@
             <div class="pl-3 py-3">
               <img
                 class="bg-[#fff9f4] p-5 rounded-md"
-                src="c1-assets/dog-cartoon.png"
+                src="c1-assets/bird-cartoon.png"
                 alt=""
               />
             </div>
@@ -264,7 +300,7 @@
             <div class="pl-3 py-3">
               <img
                 class="bg-[#fff9f4] p-5 rounded-md"
-                src="c1-assets/dog-cartoon.png"
+                src="c1-assets/rabbit-cartoon.png"
                 alt=""
               />
             </div>
@@ -281,7 +317,7 @@
             <div class="pl-3 py-3">
               <img
                 class="bg-[#fff9f4] p-5 rounded-md"
-                src="c1-assets/dog-cartoon.png"
+                src="c1-assets/bird-cartoon.png"
                 alt=""
               />
             </div>
@@ -298,7 +334,7 @@
             <div class="pl-3 py-3">
               <img
                 class="bg-[#fff9f4] p-5 rounded-md"
-                src="c1-assets/dog-cartoon.png"
+                src="c1-assets/pet-couch.png"
                 alt=""
               />
             </div>
@@ -315,7 +351,7 @@
             <div class="pl-3 py-3">
               <img
                 class="bg-[#fff9f4] p-5 rounded-md"
-                src="c1-assets/dog-cartoon.png"
+                src="c1-assets/fish-cartoon.png"
                 alt=""
               />
             </div>
@@ -332,7 +368,7 @@
             <div class="pl-3 py-3">
               <img
                 class="bg-[#fff9f4] p-5 rounded-md"
-                src="c1-assets/dog-cartoon.png"
+                src="c1-assets/pet-couch.png"
                 alt=""
               />
             </div>
@@ -349,7 +385,7 @@
             <div class="pl-3 py-3">
               <img
                 class="bg-[#fff9f4] p-5 rounded-md"
-                src="c1-assets/dog-cartoon.png"
+                src="c1-assets/rabbit-cartoon.png"
                 alt=""
               />
             </div>
