--- a/index.html
+++ b/index.html
@@ -92,10 +92,10 @@
 
     <!-- responsive nav -->
 
-    <nav class=" bg-[#fff9f4] md:hidden h-20 content-center">
+    <nav class="bg-[#fff9f4] md:hidden h-20 content-center">
       <div class="flex justify-between items-center md:container mx-auto px-5">
         <div>
-          <img src="c1-assets/logo-header.png" alt="">
+          <img src="c1-assets/logo-header.png" alt="" />
         </div>
         <div class="dropdown">
           <div tabindex="0" role="button" class="btn btn-ghost lg:hidden">
@@ -233,11 +233,13 @@
       <div class="md:container mx-auto">
         <h1 class="mb-10 text-4xl ad">Trending Pet Products</h1>
         <!-- cards -->
-        <div class="grid lg:grid-cols-5 grid-cols-2 bg-[#fff9f4] lg:gap-5 gap-2">
+        <div
+          class="grid lg:grid-cols-5 grid-cols-2 bg-[#fff9f4] lg:gap-5 gap-2"
+        >
           <!-- card 1 -->
           <div
             id="bg-img"
-            class="lg:row-span-3 lg:col-span-2 row-span-3 col-span-2 lg:h-full h-[340px]  bg-[#f9df8a] pt-12 pl-8 rounded-lg"
+            class="lg:row-span-3 lg:col-span-2 row-span-3 col-span-2 lg:h-full h-[340px] bg-[#f9df8a] pt-12 pl-8 rounded-lg"
           >
             <h1 class="text-2xl font-semibold">T-Shirt For Dogs</h1>
             <p class="text-gray-500 py-4">
@@ -381,7 +383,9 @@
               <h2>$39.99</h2>
             </div>
           </div>
-          <div class="bg-white rounded-lg gap-3 flex items-center hidden md:block md:flex">
+          <div
+            class="bg-white rounded-lg gap-3 flex items-center hidden md:block md:flex"
+          >
             <div class="pl-3 py-3">
               <img
                 class="bg-[#fff9f4] p-5 rounded-md"
@@ -405,34 +409,56 @@
     <!-- low price section -->
 
     <section class="mb-40">
-        <div class="md:container mx-auto">
-            <h1 class="mb-10 text-4xl ad">Everyday low Price</h1>
-            <div class="flex justify-between gap-5">
-                <!-- grooming mitt -->
-                <div class="flex justify-between items-center flex-1 bg-gradient-to-r from-[#f8ccfb] to-[#acd2fd] rounded-xl">
-                    <div class="pl-12">
-                        <h3 class="font-semibold pb-2">Under Price</h3>
-                        <h1 class="text-4xl ad">Pet Grooming Mitt</h1>
-                        <h2 class="text-xl font-semibold my-3 text-white">(Easy Hair Removal)</h2>
-                        <h1 class="text-4xl font-bold ad">$7.99</h1>
-                    </div>
-                    <div>
-                        <img src="c1-assets/cute-dog-mid.png" alt="">
-                    </div>
-                </div>
-                <!-- T-shirt for dogs -->
-                 <div class="flex justify-between w-[40%] pt-14 ps-12 bg-gradient-to-r from-[#fff9f4] to-[#f9df8a] rounded-xl">
-                    <div>
-                        <h1 class="text-4xl ad">T-Shirt for Dogs</h1>
-                        <h1 class="text-4xl font-bold ad text-[#ffdc26] pt-3">$7.99</h1>
-                    </div>
-                    <div>
-                        <img src="c1-assets/cute-pet-mid.png" alt="">
-                    </div>
-                 </div>
+      <div>
+        <!-- low price section -->
+        <div class="md:container mx-auto mb-40">
+          <h1 class="mb-10 text-4xl ad">Everyday low Price</h1>
+          <div class="grid grid-cols-5 gap-5">
+            <!-- grooming mitt -->
+            <div
+              class="flex lg:col-span-3 col-span-full justify-between items-center flex-1 bg-gradient-to-r from-[#f8ccfb] to-[#acd2fd] rounded-xl"
+            >
+              <div class="pl-12">
+                <h3 class="font-semibold pb-2">Under Price</h3>
+                <h1 class="text-4xl ad">Pet Grooming Mitt</h1>
+                <h2 class="text-xl font-semibold my-3 text-white">
+                  (Easy Hair Removal)
+                </h2>
+                <h1 class="text-4xl font-bold ad">$7.99</h1>
+              </div>
+              <div>
+                <img src="c1-assets/cute-dog-mid.png" alt="" />
+              </div>
             </div>
+            <!-- T-shirt for dogs -->
+            <div
+              class="flex lg:col-span-2 col-span-full justify-between pt-14 ps-12 bg-gradient-to-r from-[#fff9f4] to-[#f9df8a] rounded-xl"
+            >
+              <div>
+                <h1 class="text-4xl ad">T-Shirt for Dogs</h1>
+                <h1 class="text-4xl font-bold ad text-[#ffdc26] pt-3">$7.99</h1>
+              </div>
+              <div>
+                <img src="c1-assets/cute-pet-mid.png" alt="" />
+              </div>
+            </div>
+          </div>
         </div>
-    </section>
 
+        <!-- news section -->
+         <div class="md:container mx-auto bg-[#fff9f4] flex justify-evenly items-center py-10 rounded-lg">
+          <div>
+            <img src="c1-assets/cute-pet-mid.png" alt="">
+          </div>
+          <div>
+            <h1 class="text-4xl ad">Get Pawsome News</h1>
+            <p class="py-4 font-semibold text-xl">Exclusive training tips, ticks, product deals and more.</p>
+            <input class="py-5 px-8 mb-5" type="email" placeholder="Enter email..." id="">
+            <br>
+            <button class="btn btn-warning">Subscribe</button>
+          </div>
+         </div>
+      </div>
+    </section>
   </body>
 </html>
