--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
   </head>
   <body>
     <!-- navigation section -->
-    <nav class="bg-[#fff9f4] mb-[76px] hidden md:block">
+    <nav class="bg-[#fff9f4] mb-[76px] hidden md:block lg:px-20 px-3">
       <div class="md:container mx-auto navbar">
         <div class="navbar-start">
           <div class="dropdown">
@@ -92,7 +92,7 @@
 
     <!-- responsive nav -->
 
-    <nav class="bg-[#fff9f4] md:hidden h-20 content-center">
+    <nav class="bg-[#fff9f4] md:hidden h-20 content-center px-3">
       <div class="flex justify-between items-center md:container mx-auto px-5">
         <div>
           <img src="c1-assets/logo-header.png" alt="" />
@@ -116,7 +116,7 @@
           </div>
           <ul
             tabindex="0"
-            class="menu menu-sm dropdown-content bg-base-100 rounded-box z-[1] mt-3 w-52 p-2 shadow"
+            class="right-0 menu menu-sm dropdown-content bg-base-100 rounded-box z-[1] mt-3 w-52 p-2 shadow"
           >
             <li><a>Find a pet</a></li>
             <li><a>Breeds</a></li>
@@ -127,15 +127,17 @@
     </nav>
 
     <!-- hero section -->
-    <section class="md:container mx-auto mb-[140px]">
+    <section class="md:container mx-auto lg:mb-[140px] mb-14 lg:px-20 px-3">
       <div
-        class="min-h-[750px]"
+        class="lg:min-h-[750px] min-h-[500px]"
         style="
           background-image: url(c1-assets/cat-big.png);
           background-repeat: no-repeat;
+          background-size: contain;
+          background-position: bottom;
         "
       >
-        <div class="lg:w-2/5 px-5">
+        <div class="lg:w-2/5">
           <div>
             <h1 class="mb-5 text-5xl font-bold ad">
               Pamper Your Pet, Because They Deserve the Bes
@@ -152,7 +154,7 @@
 
     <!-- category section -->
 
-    <section class="md:container mx-auto mb-32 lg:px-8 px-3">
+    <section class="md:container mx-auto mb-32 lg:px-20 px-3">
       <h1 class="mb-10 text-4xl ad">Browse By Categories</h1>
       <!-- cards -->
       <div class="grid lg:grid-cols-6 grid-cols-2 lg:gap-6 gap-2">
@@ -229,7 +231,7 @@
 
     <!-- pet products -->
 
-    <section class="mb-40 bg-[#fff9f4] py-40 lg:px-8 px-3">
+    <section class="mb-40 bg-[#fff9f4] lg:py-24 py-10 lg:px-20 px-3">
       <div class="md:container mx-auto">
         <h1 class="mb-10 text-4xl ad">Trending Pet Products</h1>
         <!-- cards -->
@@ -239,7 +241,7 @@
           <!-- card 1 -->
           <div
             id="bg-img"
-            class="lg:row-span-3 lg:col-span-2 row-span-3 col-span-2 lg:h-full h-[340px] bg-[#f9df8a] pt-12 pl-8 rounded-lg"
+            class="lg:row-span-3 lg:col-span-2 row-span-3 col-span-2 lg:h-full h-[390px] bg-[#f9df8a] pt-12 pl-8 rounded-lg"
           >
             <h1 class="text-2xl font-semibold">T-Shirt For Dogs</h1>
             <p class="text-gray-500 py-4">
@@ -408,135 +410,137 @@
 
     <!-- low price section -->
 
-    <section class="mb-40 relative ">
-      <div>
-        <!-- low price section -->
-        <div class="md:container mx-auto mb-[405px]">
-          <h1 class="mb-10 text-4xl ad">Everyday low Price</h1>
-          <div class="grid grid-cols-5 gap-5">
-            <!-- grooming mitt -->
-            <div 
-              class="flex lg:col-span-3 col-span-full justify-between lg:items-center flex-1 bg-gradient-to-r from-[#f8ccfb] to-[#acd2fd] rounded-xl"
-            >
-              <div class="lg:pl-12 pl-4 pt-4">
-                <h3 class="font-semibold pb-2 hidden md:block">Under Price</h3>
-                <h1 class="lg:text-4xl text-2xl ad">Pet Grooming Mitt</h1>
-                <h2 class="text-xl font-semibold my-3 text-white hidden md:block">
-                  (Easy Hair Removal)
-                </h2>
-                <h1 class="text-4xl font-bold ad">$7.99</h1>
-              </div>
-              <div>
-                <img class="w-[200px] md:w-full" src="c1-assets/cute-dog-mid.png" alt="" />
-              </div>
-            </div>
-            <!-- T-shirt for dogs -->
-            <div
-              class="flex lg:col-span-2 col-span-full justify-between pt-14 ps-12 bg-gradient-to-r from-[#fff9f4] to-[#f9df8a] rounded-xl"
-            >
-              <div>
-                <h1 class="text-4xl ad">T-Shirt for Dogs</h1>
-                <h1 class="text-4xl font-bold ad text-[#ffdc26] pt-3">$7.99</h1>
-              </div>
-              <div>
-                <img src="c1-assets/cute-pet-mid.png" alt="" />
-              </div>
-            </div>
+    <div class="md:container mx-auto lg:px-20 px-3">
+      <h1 class="mb-10 text-4xl ad">Everyday low Price</h1>
+      <div class="grid grid-cols-5 gap-5">
+        <!-- grooming mitt -->
+        <div
+          class="flex lg:col-span-3 col-span-full justify-between lg:items-center flex-1 bg-gradient-to-r from-[#f8ccfb] to-[#acd2fd] rounded-xl"
+        >
+          <div class="lg:pl-12 pl-4 pt-4">
+            <h3 class="font-semibold pb-2 hidden md:block">Under Price</h3>
+            <h1 class="lg:text-4xl text-2xl ad">Pet Grooming Mitt</h1>
+            <h2 class="text-xl font-semibold my-3 text-white hidden md:block">
+              (Easy Hair Removal)
+            </h2>
+            <h1 class="text-4xl font-bold ad">$7.99</h1>
+          </div>
+          <div>
+            <img
+              class="w-[200px] md:w-full"
+              src="c1-assets/cute-dog-mid.png"
+              alt=""
+            />
           </div>
         </div>
-
-        <!-- news section -->
-        <div class="md:container">
-          <div
-          class="absolute max-w-[1200px] left-0 right-0 lg:bottom-96 bottom-[550px] mx-auto bg-[#fff9f4] lg:flex justify-evenly items-center py-10 rounded-lg"
+        <!-- T-shirt for dogs -->
+        <div
+          class="flex lg:col-span-2 col-span-full justify-between pt-14 ps-12 bg-gradient-to-r from-[#fff9f4] to-[#f9df8a] rounded-xl"
         >
+          <div>
+            <h1 class="text-4xl ad">T-Shirt for Dogs</h1>
+            <h1 class="text-4xl font-bold ad text-[#ffdc26] pt-3">$7.99</h1>
+          </div>
           <div>
             <img src="c1-assets/cute-pet-mid.png" alt="" />
           </div>
-          <div class="px-3">
-            <h1 class="text-4xl ad">Get Pawsome News</h1>
-            <p class="py-4 font-semibold text-xl">
-              Exclusive training tips, ticks, product deals and more.
-            </p>
-            <input
-              class="py-5 px-8 mb-5"
-              type="email"
-              placeholder="Enter email..."
-              id=""
-            />
-            <br />
-            <button class="btn btn-warning">Subscribe</button>
-          </div>
         </div>
-        </div>
-        <!-- footer section -->
-
-        <footer class="bg-[#f9df8a]">
-          <footer
-            class="md:container lg:flex justify-between sm:footer-horizontal mx-auto pt-80 pb-36"
-          >
-            <nav class="flex flex-col w-3/12 gap-6">
-              <div class="flex items-center gap-3">
-                <img src="c1-assets/logo-footer.png" alt="" />
-                <h6 class="text-2xl font-bold">Browse4Pets</h6>
-              </div>
-              <p class="text-gray-600">
-                Discover a world of treats, toys, and essentials handpicked for
-                your furry friends
-              </p>
-            </nav>
-            <nav class="flex flex-col gap-8">
-              <a class="link link-hover text-xl">Find a pet</a>
-              <a class="link link-hover text-xl">Breeds</a>
-              <a class="link link-hover text-xl">Contact us</a>
-            </nav>
-            <nav>
-              <h6 class="footer-title">Follow Us</h6>
-              <div class="grid grid-flow-col gap-4">
-                <a>
-                  <svg
-                    xmlns="http://www.w3.org/2000/svg"
-                    width="24"
-                    height="24"
-                    viewBox="0 0 24 24"
-                    class="fill-current"
-                  >
-                    <path
-                      d="M24 4.557c-.883.392-1.832.656-2.828.775 1.017-.609 1.798-1.574 2.165-2.724-.951.564-2.005.974-3.127 1.195-.897-.957-2.178-1.555-3.594-1.555-3.179 0-5.515 2.966-4.797 6.045-4.091-.205-7.719-2.165-10.148-5.144-1.29 2.213-.669 5.108 1.523 6.574-.806-.026-1.566-.247-2.229-.616-.054 2.281 1.581 4.415 3.949 4.89-.693.188-1.452.232-2.224.084.626 1.956 2.444 3.379 4.6 3.419-2.07 1.623-4.678 2.348-7.29 2.04 2.179 1.397 4.768 2.212 7.548 2.212 9.142 0 14.307-7.721 13.995-14.646.962-.695 1.797-1.562 2.457-2.549z"
-                    ></path>
-                  </svg>
-                </a>
-                <a>
-                  <svg
-                    xmlns="http://www.w3.org/2000/svg"
-                    width="24"
-                    height="24"
-                    viewBox="0 0 24 24"
-                    class="fill-current"
-                  >
-                    <path
-                      d="M19.615 3.184c-3.604-.246-11.631-.245-15.23 0-3.897.266-4.356 2.62-4.385 8.816.029 6.185.484 8.549 4.385 8.816 3.6.245 11.626.246 15.23 0 3.897-.266 4.356-2.62 4.385-8.816-.029-6.185-.484-8.549-4.385-8.816zm-10.615 12.816v-8l8 3.993-8 4.007z"
-                    ></path>
-                  </svg>
-                </a>
-                <a>
-                  <svg
-                    xmlns="http://www.w3.org/2000/svg"
-                    width="24"
-                    height="24"
-                    viewBox="0 0 24 24"
-                    class="fill-current"
-                  >
-                    <path
-                      d="M9 8h-3v4h3v12h5v-12h3.642l.358-4h-4v-1.667c0-.955.192-1.333 1.115-1.333h2.885v-5h-3.808c-3.596 0-5.192 1.583-5.192 4.615v3.385z"
-                    ></path>
-                  </svg>
-                </a>
-              </div>
-            </nav>
-          </footer>
-        </footer>
       </div>
-    </section>
+    </div>
+
+    <!-- low price section -->
+
+    <!-- news section -->
+    <div class="md:container mx-auto lg:px-20 px-3 my-12">
+      <div
+        class="mx-auto bg-[#fff9f4] lg:flex justify-evenly items-center py-10 rounded-lg"
+      >
+        <div>
+          <img src="c1-assets/cute-pet-mid.png" alt="" />
+        </div>
+        <div class="px-3">
+          <h1 class="text-4xl ad">Get Pawsome News</h1>
+          <p class="py-4 font-semibold text-xl">
+            Exclusive training tips, ticks, product deals and more.
+          </p>
+          <input
+            class="py-5 px-8 mb-5"
+            type="email"
+            placeholder="Enter email..."
+            id=""
+          />
+          <br />
+          <button class="btn btn-warning">Subscribe</button>
+        </div>
+      </div>
+    </div>
+
+    <!-- footer section -->
+
+    <footer class="bg-[#f9df8a]">
+      <footer
+        class="md:container lg:flex justify-between sm:footer-horizontal mx-auto pt-36 pb-36 lg:px-20 px-3"
+      >
+        <nav class="flex flex-col w-3/12 gap-6">
+          <div class="flex items-center gap-3">
+            <img src="c1-assets/logo-footer.png" alt="" />
+            <h6 class="text-2xl font-bold">Browse4Pets</h6>
+          </div>
+          <p class="text-gray-600">
+            Discover a world of treats, toys, and essentials handpicked for your
+            furry friends
+          </p>
+        </nav>
+        <nav class="flex flex-col gap-8">
+          <a class="link link-hover text-xl">Find a pet</a>
+          <a class="link link-hover text-xl">Breeds</a>
+          <a class="link link-hover text-xl">Contact us</a>
+        </nav>
+        <nav>
+          <h6 class="footer-title">Follow Us</h6>
+          <div class="grid grid-flow-col gap-4">
+            <a>
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="24"
+                height="24"
+                viewBox="0 0 24 24"
+                class="fill-current"
+              >
+                <path
+                  d="M24 4.557c-.883.392-1.832.656-2.828.775 1.017-.609 1.798-1.574 2.165-2.724-.951.564-2.005.974-3.127 1.195-.897-.957-2.178-1.555-3.594-1.555-3.179 0-5.515 2.966-4.797 6.045-4.091-.205-7.719-2.165-10.148-5.144-1.29 2.213-.669 5.108 1.523 6.574-.806-.026-1.566-.247-2.229-.616-.054 2.281 1.581 4.415 3.949 4.89-.693.188-1.452.232-2.224.084.626 1.956 2.444 3.379 4.6 3.419-2.07 1.623-4.678 2.348-7.29 2.04 2.179 1.397 4.768 2.212 7.548 2.212 9.142 0 14.307-7.721 13.995-14.646.962-.695 1.797-1.562 2.457-2.549z"
+                ></path>
+              </svg>
+            </a>
+            <a>
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="24"
+                height="24"
+                viewBox="0 0 24 24"
+                class="fill-current"
+              >
+                <path
+                  d="M19.615 3.184c-3.604-.246-11.631-.245-15.23 0-3.897.266-4.356 2.62-4.385 8.816.029 6.185.484 8.549 4.385 8.816 3.6.245 11.626.246 15.23 0 3.897-.266 4.356-2.62 4.385-8.816-.029-6.185-.484-8.549-4.385-8.816zm-10.615 12.816v-8l8 3.993-8 4.007z"
+                ></path>
+              </svg>
+            </a>
+            <a>
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="24"
+                height="24"
+                viewBox="0 0 24 24"
+                class="fill-current"
+              >
+                <path
+                  d="M9 8h-3v4h3v12h5v-12h3.642l.358-4h-4v-1.667c0-.955.192-1.333 1.115-1.333h2.885v-5h-3.808c-3.596 0-5.192 1.583-5.192 4.615v3.385z"
+                ></path>
+              </svg>
+            </a>
+          </div>
+        </nav>
+      </footer>
+    </footer>
   </body>
 </html>
