--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
   </head>
   <body>
     <!-- navigation section -->
-    <nav class="bg-[#fff9f4] mb-[76px] hidden md:block lg:px-20 px-3">
-      <div class="md:container mx-auto navbar">
+    <nav class="bg-[#fff9f4] mb-[76px] hidden md:block">
+      <div class="md:container mx-auto navbar lg:px-20 px-3">
         <div class="navbar-start">
           <div class="dropdown">
             <div tabindex="0" role="button" class="btn btn-ghost md:hidden">
@@ -93,7 +93,7 @@
     <!-- responsive nav -->
 
     <nav class="bg-[#fff9f4] md:hidden h-20 content-center px-3">
-      <div class="flex justify-between items-center md:container mx-auto px-5">
+      <div class="flex justify-between items-center md:container mx-auto">
         <div>
           <img src="c1-assets/logo-header.png" alt="" />
         </div>
@@ -154,10 +154,10 @@
 
     <!-- category section -->
 
-    <section class="md:container mx-auto mb-32 lg:px-20 px-3">
+    <section class="md:container mx-auto lg:mb-32 mb-12 lg:px-20 px-3">
       <h1 class="mb-10 text-4xl ad">Browse By Categories</h1>
       <!-- cards -->
-      <div class="grid lg:grid-cols-6 grid-cols-2 lg:gap-6 gap-2">
+      <div class="grid lg:grid-cols-6 grid-cols-2 gap-2">
         <!-- card 1 -->
         <div
           class="border bg-[#f9df8a] flex flex-col content-center items-center py-10 rounded-xl"
@@ -231,12 +231,12 @@
 
     <!-- pet products -->
 
-    <section class="mb-40 bg-[#fff9f4] lg:py-24 py-10 lg:px-20 px-3">
-      <div class="md:container mx-auto">
+    <section class="lg:mb-20 mb-12 bg-[#fff9f4] lg:py-24 py-10">
+      <div class="md:container mx-auto lg:px-20 px-3">
         <h1 class="mb-10 text-4xl ad">Trending Pet Products</h1>
         <!-- cards -->
         <div
-          class="grid lg:grid-cols-5 grid-cols-2 bg-[#fff9f4] lg:gap-5 gap-2"
+          class="grid lg:grid-cols-5 grid-cols-2 bg-[#fff9f4] gap-2"
         >
           <!-- card 1 -->
           <div
@@ -410,7 +410,7 @@
 
     <!-- low price section -->
 
-    <div class="md:container mx-auto lg:px-20 px-3">
+    <div class="md:container mx-auto lg:px-20 px-3 lg:mb-[405px] mb-[480px]">
       <h1 class="mb-10 text-4xl ad">Everyday low Price</h1>
       <div class="grid grid-cols-5 gap-5">
         <!-- grooming mitt -->
@@ -448,41 +448,42 @@
       </div>
     </div>
 
-    <!-- low price section -->
-
     <!-- news section -->
-    <div class="md:container mx-auto lg:px-20 px-3 my-12">
-      <div
-        class="mx-auto bg-[#fff9f4] lg:flex justify-evenly items-center py-10 rounded-lg"
-      >
-        <div>
-          <img src="c1-assets/cute-pet-mid.png" alt="" />
-        </div>
-        <div class="px-3">
-          <h1 class="text-4xl ad">Get Pawsome News</h1>
-          <p class="py-4 font-semibold text-xl">
-            Exclusive training tips, ticks, product deals and more.
-          </p>
-          <input
-            class="py-5 px-8 mb-5"
-            type="email"
-            placeholder="Enter email..."
-            id=""
-          />
-          <br />
-          <button class="btn btn-warning">Subscribe</button>
+
+    <section class="relative">
+      <div class="absolute lg:bottom-[-280px] bottom-[-400px] left-1 right-1 md:container mx-auto lg:px-20 px-3 my-12">
+        <div
+          class="mx-auto bg-[#fff9f4] lg:flex justify-evenly items-center py-10 rounded-lg"
+        >
+          <div>
+            <img src="c1-assets/cute-pet-mid.png" alt="" />
+          </div>
+          <div class="px-3">
+            <h1 class="text-4xl ad">Get Pawsome News</h1>
+            <p class="py-4 font-semibold text-xl">
+              Exclusive training tips, ticks, product deals and more.
+            </p>
+            <input
+              class="py-5 lg:px-8 px-3 mb-5"
+              type="email"
+              placeholder="Enter email..."
+              id=""
+            />
+            <br />
+            <button class="btn btn-warning">Subscribe</button>
+          </div>
         </div>
       </div>
-    </div>
+    </section>
 
     <!-- footer section -->
 
     <footer class="bg-[#f9df8a]">
       <footer
-        class="md:container lg:flex justify-between sm:footer-horizontal mx-auto pt-36 pb-36 lg:px-20 px-3"
+        class="md:container lg:flex justify-between sm:footer-horizontal mx-auto pt-36 lg:pb-36 pb-12 lg:px-20 px-3"
       >
-        <nav class="flex flex-col w-3/12 gap-6">
-          <div class="flex items-center gap-3">
+        <nav class="flex flex-col lg:w-3/12 gap-6">
+          <div class="flex items-center gap-3 pt-56 lg:pt-36">
             <img src="c1-assets/logo-footer.png" alt="" />
             <h6 class="text-2xl font-bold">Browse4Pets</h6>
           </div>
@@ -491,53 +492,18 @@
             furry friends
           </p>
         </nav>
-        <nav class="flex flex-col gap-8">
-          <a class="link link-hover text-xl">Find a pet</a>
-          <a class="link link-hover text-xl">Breeds</a>
-          <a class="link link-hover text-xl">Contact us</a>
+        <nav class="flex flex-col lg:gap-8 gap-2 lg:pt-36 pt-6">
+          <a class="link link-hover">Find a pet</a>
+          <a class="link link-hover">Breeds</a>
+          <a class="link link-hover">Contact us</a>
         </nav>
-        <nav>
+        <nav class="lg:pt-36 pt-6">
           <h6 class="footer-title">Follow Us</h6>
-          <div class="grid grid-flow-col gap-4">
-            <a>
-              <svg
-                xmlns="http://www.w3.org/2000/svg"
-                width="24"
-                height="24"
-                viewBox="0 0 24 24"
-                class="fill-current"
-              >
-                <path
-                  d="M24 4.557c-.883.392-1.832.656-2.828.775 1.017-.609 1.798-1.574 2.165-2.724-.951.564-2.005.974-3.127 1.195-.897-.957-2.178-1.555-3.594-1.555-3.179 0-5.515 2.966-4.797 6.045-4.091-.205-7.719-2.165-10.148-5.144-1.29 2.213-.669 5.108 1.523 6.574-.806-.026-1.566-.247-2.229-.616-.054 2.281 1.581 4.415 3.949 4.89-.693.188-1.452.232-2.224.084.626 1.956 2.444 3.379 4.6 3.419-2.07 1.623-4.678 2.348-7.29 2.04 2.179 1.397 4.768 2.212 7.548 2.212 9.142 0 14.307-7.721 13.995-14.646.962-.695 1.797-1.562 2.457-2.549z"
-                ></path>
-              </svg>
-            </a>
-            <a>
-              <svg
-                xmlns="http://www.w3.org/2000/svg"
-                width="24"
-                height="24"
-                viewBox="0 0 24 24"
-                class="fill-current"
-              >
-                <path
-                  d="M19.615 3.184c-3.604-.246-11.631-.245-15.23 0-3.897.266-4.356 2.62-4.385 8.816.029 6.185.484 8.549 4.385 8.816 3.6.245 11.626.246 15.23 0 3.897-.266 4.356-2.62 4.385-8.816-.029-6.185-.484-8.549-4.385-8.816zm-10.615 12.816v-8l8 3.993-8 4.007z"
-                ></path>
-              </svg>
-            </a>
-            <a>
-              <svg
-                xmlns="http://www.w3.org/2000/svg"
-                width="24"
-                height="24"
-                viewBox="0 0 24 24"
-                class="fill-current"
-              >
-                <path
-                  d="M9 8h-3v4h3v12h5v-12h3.642l.358-4h-4v-1.667c0-.955.192-1.333 1.115-1.333h2.885v-5h-3.808c-3.596 0-5.192 1.583-5.192 4.615v3.385z"
-                ></path>
-              </svg>
-            </a>
+          <div class="flex gap-4">
+            <i class="fa-brands fa-facebook"></i>
+            <i class="fa-brands fa-instagram"></i>
+            <i class="fa-brands fa-linkedin"></i>
+            <i class="fa-brands fa-youtube"></i>
           </div>
         </nav>
       </footer>
