--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     />
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
-  <body>
+  <body class="overflow-x-hidden">
     <!-- navigation section -->
     <nav class="bg-[#fff9f4] mb-[76px] hidden md:block">
       <div class="md:container mx-auto navbar lg:px-20 px-3">
@@ -259,7 +259,7 @@
             </div>
             <div>
               <div class="flex gap-2">
-                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star text-[#ffc107]"></i>
                 <h3>4.5</h3>
               </div>
               <h1 class="font-bold">Pet Bed</h1>
@@ -276,7 +276,7 @@
             </div>
             <div>
               <div class="flex gap-2">
-                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star text-[#ffc107]"></i>
                 <h3>4.5</h3>
               </div>
               <h1 class="font-bold">Pet Bed</h1>
@@ -293,7 +293,7 @@
             </div>
             <div>
               <div class="flex gap-2">
-                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star text-[#ffc107]"></i>
                 <h3>4.5</h3>
               </div>
               <h1 class="font-bold">Pet Bed</h1>
@@ -310,7 +310,7 @@
             </div>
             <div>
               <div class="flex gap-2">
-                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star text-[#ffc107]"></i>
                 <h3>4.5</h3>
               </div>
               <h1 class="font-bold">Pet Bed</h1>
@@ -327,7 +327,7 @@
             </div>
             <div>
               <div class="flex gap-2">
-                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star text-[#ffc107]"></i>
                 <h3>4.5</h3>
               </div>
               <h1 class="font-bold">Pet Bed</h1>
@@ -344,7 +344,7 @@
             </div>
             <div>
               <div class="flex gap-2">
-                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star text-[#ffc107]"></i>
                 <h3>4.5</h3>
               </div>
               <h1 class="font-bold">Pet Bed</h1>
@@ -361,7 +361,7 @@
             </div>
             <div>
               <div class="flex gap-2">
-                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star text-[#ffc107]"></i>
                 <h3>4.5</h3>
               </div>
               <h1 class="font-bold">Pet Bed</h1>
@@ -378,7 +378,7 @@
             </div>
             <div>
               <div class="flex gap-2">
-                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star text-[#ffc107]"></i>
                 <h3>4.5</h3>
               </div>
               <h1 class="font-bold">Pet Bed</h1>
@@ -386,7 +386,7 @@
             </div>
           </div>
           <div
-            class="bg-white rounded-lg gap-3 flex items-center hidden md:block md:flex"
+            class="bg-white rounded-lg gap-3 items-center hidden md:flex"
           >
             <div class="pl-3 py-3">
               <img
@@ -397,7 +397,7 @@
             </div>
             <div>
               <div class="flex gap-2">
-                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star text-[#ffc107]"></i>
                 <h3>4.5</h3>
               </div>
               <h1 class="font-bold">Pet Bed</h1>
