almost final commit

--- a/index.html
+++ b/index.html
@@ -235,9 +235,7 @@
       <div class="md:container mx-auto lg:px-20 px-3">
         <h1 class="mb-10 text-4xl ad">Trending Pet Products</h1>
         <!-- cards -->
-        <div
-          class="grid lg:grid-cols-5 grid-cols-2 bg-[#fff9f4] gap-2"
-        >
+        <div class="grid lg:grid-cols-5 grid-cols-2 bg-[#fff9f4] gap-2">
           <!-- card 1 -->
           <div
             id="bg-img"
@@ -385,9 +383,7 @@
               <h2>$39.99</h2>
             </div>
           </div>
-          <div
-            class="bg-white rounded-lg gap-3 items-center hidden md:flex"
-          >
+          <div class="bg-white rounded-lg gap-3 items-center hidden md:flex">
             <div class="pl-3 py-3">
               <img
                 class="bg-[#fff9f4] p-5 rounded-md"
@@ -410,7 +406,7 @@
 
     <!-- low price section -->
 
-    <div class="md:container mx-auto lg:px-20 px-3 lg:mb-[405px] mb-[480px]">
+    <div class="md:container mx-auto lg:px-20 px-3 lg:mb-20 mb-14">
       <h1 class="mb-10 text-4xl ad">Everyday low Price</h1>
       <div class="grid grid-cols-5 gap-5">
         <!-- grooming mitt -->
@@ -448,10 +444,103 @@
       </div>
     </div>
 
+    <!-- pet health care -->
+
+    <section class="md:container mx-auto lg:px-20 px-3 lg:mb-[300px] mb-[480px]">
+      <div class="bg-[#fff9f4] lg:px-20 py-12 px-3 rounded-lg">
+        <h1 class="mb-10 text-4xl font-bold ad">Pet Health Care</h1>
+        <div class="grid lg:grid-cols-2 gap-5">
+          <!-- Left Section - Form -->
+          <div class="grid grid-cols-2 gap-y-6 gap-x-5">
+            <div>
+              <label class="block font-semibold mb-2">Full Name</label>
+              <input
+                class="w-full p-3 border rounded-md"
+                type="text"
+                placeholder="Shihab Uddin"
+              />
+            </div>
+
+            <div>
+              <label class="block font-semibold mb-2">E-Mail</label>
+              <input
+                class="w-full p-3 border rounded-md"
+                type="email"
+                placeholder="shihab@gmail.com"
+              />
+            </div>
+
+            <div>
+              <label class="block font-semibold mb-2">Phone</label>
+              <input
+                class="w-full p-3 border rounded-md"
+                type="text"
+                placeholder="+88019377.."
+              />
+            </div>
+
+            <div>
+              <label class="block font-semibold mb-2">Subject</label>
+              <input
+                class="w-full p-3 border rounded-md"
+                type="text"
+                placeholder="Type here..."
+              />
+            </div>
+
+            <div class="col-span-2">
+              <label class="block font-semibold mb-2">Your Message</label>
+              <textarea
+                class="w-full p-3 border rounded-md"
+                rows="4"
+                placeholder="Type your message..."
+              ></textarea>
+              <button
+                class="bg-[#ffdc26] text-black font-semibold px-6 py-3 rounded-md mt-3 hover:bg-yellow-500"
+              >
+                Submit
+              </button>
+            </div>
+          </div>
+
+          <!-- Right Section - Contact Info -->
+          <div class="flex flex-col">
+            <h2 class="mb-6 text-3xl font-bold ad">
+              Get In Touch With A Pet Doctor
+            </h2>
+            <p class="text-gray-500">
+              Get in touch with a pet doctor for professional guidance, care,
+              and expert advice to ensure your pet's health.
+            </p>
+
+            <div class="mt-5">
+              <ul class="flex flex-col gap-2 text-gray-700">
+                <li>
+                  <strong>Phone:</strong>
+                  <a href="tel:+880937737798" class="hover:underline"
+                    >+880937737798</a
+                  >
+                </li>
+                <li><strong>Address:</strong> Estern Road, Natore, Rajshahi</li>
+                <li>
+                  <strong>Email:</strong>
+                  <a href="shihabuddin2469@gmail.com" class="hover:underline"
+                    >petcare@gmail.com</a
+                  >
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <!-- news section -->
 
     <section class="relative">
-      <div class="absolute lg:bottom-[-280px] bottom-[-400px] left-1 right-1 md:container mx-auto lg:px-20 px-3 my-12">
+      <div
+        class="absolute lg:bottom-[-280px] bottom-[-400px] left-1 right-1 md:container mx-auto lg:px-20 px-3 my-12"
+      >
         <div
           class="mx-auto bg-[#fff9f4] lg:flex justify-evenly items-center py-10 rounded-lg"
         >
