--- a/index.html
+++ b/index.html
@@ -39,7 +39,9 @@
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
   <body class="overflow-x-hidden">
+
     <!-- navigation section -->
+
     <nav class="bg-[#fff9f4] mb-[76px] hidden md:block">
       <div class="md:container mx-auto navbar lg:px-20 px-3">
         <div class="navbar-start">
@@ -127,6 +129,7 @@
     </nav>
 
     <!-- hero section -->
+
     <section class="md:container mx-auto lg:mb-[140px] mb-14 lg:px-20 px-3">
       <div
         class="lg:min-h-[750px] min-h-[500px]"
@@ -160,7 +163,7 @@
       <div class="grid lg:grid-cols-6 grid-cols-2 gap-2">
         <!-- card 1 -->
         <div
-          class="border bg-[#f9df8a] flex flex-col content-center items-center py-10 rounded-xl"
+          class="border bg-[#f9df8a] flex flex-col content-center items-center py-10 rounded-xl "
         >
           <img
             class="bg-white rounded-full p-6"
@@ -241,13 +244,13 @@
             id="bg-img"
             class="lg:row-span-3 lg:col-span-2 row-span-3 col-span-2 lg:h-full h-[390px] bg-[#f9df8a] pt-12 pl-8 rounded-lg"
           >
-            <h1 class="text-2xl font-semibold">T-Shirt For Dogs</h1>
+            <h1 class="text-2xl font-semibold ad">T-Shirt For Dogs</h1>
             <p class="text-gray-500 py-4">
               Discover a world of treats, toys, and essentials handpicked for
             </p>
             <button class="btn">Shop Now</button>
           </div>
-          <div class="bg-white rounded-lg gap-3 flex items-center">
+          <div class="bg-white rounded-lg gap-3 items-center hidden md:flex">
             <div class="pl-3 py-3">
               <img
                 class="bg-[#fff9f4] p-5 rounded-md"
@@ -264,7 +267,7 @@
               <h2>$39.99</h2>
             </div>
           </div>
-          <div class="bg-white rounded-lg gap-3 flex items-center">
+          <div class="bg-white rounded-lg gap-3 items-center hidden md:flex">
             <div class="pl-3 py-3">
               <img
                 class="bg-[#fff9f4] p-5 rounded-md"
@@ -281,7 +284,7 @@
               <h2>$39.99</h2>
             </div>
           </div>
-          <div class="bg-white rounded-lg gap-3 flex items-center">
+          <div class="bg-white rounded-lg gap-3  items-center hidden md:flex">
             <div class="pl-3 py-3">
               <img
                 class="bg-[#fff9f4] p-5 rounded-md"
@@ -298,7 +301,7 @@
               <h2>$39.99</h2>
             </div>
           </div>
-          <div class="bg-white rounded-lg gap-3 flex items-center">
+          <div class="bg-white rounded-lg gap-3  items-center hidden md:flex">
             <div class="pl-3 py-3">
               <img
                 class="bg-[#fff9f4] p-5 rounded-md"
@@ -315,7 +318,7 @@
               <h2>$39.99</h2>
             </div>
           </div>
-          <div class="bg-white rounded-lg gap-3 flex items-center">
+          <div class="bg-white rounded-lg gap-3  items-center hidden md:flex">
             <div class="pl-3 py-3">
               <img
                 class="bg-[#fff9f4] p-5 rounded-md"
@@ -349,7 +352,7 @@
               <h2>$39.99</h2>
             </div>
           </div>
-          <div class="bg-white rounded-lg gap-3 flex items-center">
+          <div class="bg-white rounded-lg gap-3  items-center hidden md:flex">
             <div class="pl-3 py-3">
               <img
                 class="bg-[#fff9f4] p-5 rounded-md"
@@ -400,6 +403,108 @@
               <h2>$39.99</h2>
             </div>
           </div>
+          <div class="bg-white rounded-lg gap-3 items-center md:hidden flex">
+            <div class="pl-3 py-3">
+              <img
+                class="bg-[#fff9f4] p-5 rounded-md"
+                src="c1-assets/pet-couch.png"
+                alt=""
+              />
+            </div>
+            <div>
+              <div class="flex gap-2">
+                <i class="fa-solid fa-star text-[#ffc107]"></i>
+                <h3>4.5</h3>
+              </div>
+              <h1 class="font-bold">Pet Bed</h1>
+              <h2>$39.99</h2>
+            </div>
+          </div>
+          <div class="bg-white rounded-lg gap-3 items-center md:hidden flex">
+            <div class="pl-3 py-3">
+              <img
+                class="bg-[#fff9f4] p-5 rounded-md"
+                src="c1-assets/pet-couch.png"
+                alt=""
+              />
+            </div>
+            <div>
+              <div class="flex gap-2">
+                <i class="fa-solid fa-star text-[#ffc107]"></i>
+                <h3>4.5</h3>
+              </div>
+              <h1 class="font-bold">Pet Bed</h1>
+              <h2>$39.99</h2>
+            </div>
+          </div>
+          <div class="bg-white rounded-lg gap-3 items-center md:hidden flex">
+            <div class="pl-3 py-3">
+              <img
+                class="bg-[#fff9f4] p-5 rounded-md"
+                src="c1-assets/pet-couch.png"
+                alt=""
+              />
+            </div>
+            <div>
+              <div class="flex gap-2">
+                <i class="fa-solid fa-star text-[#ffc107]"></i>
+                <h3>4.5</h3>
+              </div>
+              <h1 class="font-bold">Pet Bed</h1>
+              <h2>$39.99</h2>
+            </div>
+          </div>
+          <div class="bg-white rounded-lg gap-3 items-center md:hidden flex">
+            <div class="pl-3 py-3">
+              <img
+                class="bg-[#fff9f4] p-5 rounded-md"
+                src="c1-assets/pet-couch.png"
+                alt=""
+              />
+            </div>
+            <div>
+              <div class="flex gap-2">
+                <i class="fa-solid fa-star text-[#ffc107]"></i>
+                <h3>4.5</h3>
+              </div>
+              <h1 class="font-bold">Pet Bed</h1>
+              <h2>$39.99</h2>
+            </div>
+          </div>
+          <div class="bg-white rounded-lg gap-3 items-center md:hidden flex">
+            <div class="pl-3 py-3">
+              <img
+                class="bg-[#fff9f4] p-5 rounded-md"
+                src="c1-assets/pet-couch.png"
+                alt=""
+              />
+            </div>
+            <div>
+              <div class="flex gap-2">
+                <i class="fa-solid fa-star text-[#ffc107]"></i>
+                <h3>4.5</h3>
+              </div>
+              <h1 class="font-bold">Pet Bed</h1>
+              <h2>$39.99</h2>
+            </div>
+          </div>
+          <div class="bg-white rounded-lg gap-3 items-center md:hidden flex">
+            <div class="pl-3 py-3">
+              <img
+                class="bg-[#fff9f4] p-5 rounded-md"
+                src="c1-assets/pet-couch.png"
+                alt=""
+              />
+            </div>
+            <div>
+              <div class="flex gap-2">
+                <i class="fa-solid fa-star text-[#ffc107]"></i>
+                <h3>4.5</h3>
+              </div>
+              <h1 class="font-bold">Pet Bed</h1>
+              <h2>$39.99</h2>
+            </div>
+          </div>
         </div>
       </div>
     </section>
@@ -431,10 +536,10 @@
         </div>
         <!-- T-shirt for dogs -->
         <div
-          class="flex lg:col-span-2 col-span-full justify-between pt-14 ps-12 bg-gradient-to-r from-[#fff9f4] to-[#f9df8a] rounded-xl"
+          class="flex lg:col-span-2 col-span-full justify-between lg:pt-14 pt-3 lg:ps-12 ps-3 bg-gradient-to-r from-[#fff9f4] to-[#f9df8a] rounded-xl"
         >
           <div>
-            <h1 class="text-4xl ad">T-Shirt for Dogs</h1>
+            <h1 class="lg:text-4xl text-2xl ad">T-Shirt for Dogs</h1>
             <h1 class="text-4xl font-bold ad text-[#ffdc26] pt-3">$7.99</h1>
           </div>
           <div>
@@ -446,11 +551,12 @@
 
     <!-- pet health care -->
 
-    <section class="md:container mx-auto lg:px-20 px-3 lg:mb-[300px] mb-[480px]">
+    <section
+      class="md:container mx-auto lg:px-20 px-3 lg:mb-[300px] mb-[480px]"
+    >
       <div class="bg-[#fff9f4] lg:px-20 py-12 px-3 rounded-lg">
         <h1 class="mb-10 text-4xl font-bold ad">Pet Health Care</h1>
         <div class="grid lg:grid-cols-2 gap-5">
-          <!-- Left Section - Form -->
           <div class="grid grid-cols-2 gap-y-6 gap-x-5">
             <div>
               <label class="block font-semibold mb-2">Full Name</label>
@@ -503,7 +609,6 @@
             </div>
           </div>
 
-          <!-- Right Section - Contact Info -->
           <div class="flex flex-col">
             <h2 class="mb-6 text-3xl font-bold ad">
               Get In Touch With A Pet Doctor
@@ -574,7 +679,7 @@
         <nav class="flex flex-col lg:w-3/12 gap-6">
           <div class="flex items-center gap-3 pt-56 lg:pt-36">
             <img src="c1-assets/logo-footer.png" alt="" />
-            <h6 class="text-2xl font-bold">Browse4Pets</h6>
+            <h6 class="text-2xl font-bold">Browse<span class="text-[#ffdc26]">4</span>Pets</h6>
           </div>
           <p class="text-gray-600">
             Discover a world of treats, toys, and essentials handpicked for your
