--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 
     <section class="md:container mx-auto lg:mb-[140px] mb-14 lg:px-20 px-3">
       <div
-        class="lg:min-h-[750px] min-h-[500px]"
+        class="min-h-[500px]"
         style="
           background-image: url(c1-assets/cat-big.png);
           background-repeat: no-repeat;
